# devops-pipeline

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
charts/task-system/: Chart.yaml  values.yaml
charts/task-system/templates/: _helpers.tpl  api.yaml  configmap.yaml  redis.yaml  web.yaml  worker.yaml
infra/k8s/: api.yaml  configmap.yaml  namespace.yaml  redis.yaml  web.yaml  worker.yaml
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/api_service/: dependencies.py  main.py
services/worker/: Dockerfile  README.md  pyproject.toml
services/worker/src/worker_service/: main.py
tests/: conftest.py  test_api_endpoints.py  test_schema_validation.py  test_task_processing.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo
web/src/: App.tsx  api.ts  styles.css  types.ts
