[project]
name = "api-service"
version = "0.1.0"
description = "FastAPI service for submitting and querying asynchronous tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "task-system-common",
]

[tool.uv.sources]
task-system-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_service"]
