[project]
name = "worker-service"
version = "0.1.0"
description = "RQ worker service for asynchronous task execution."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "task-system-common",
]

[tool.uv.sources]
task-system-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker_service"]
